--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # compiled output
 /dist
 /tmp
+src/app/mock-api.ts
 
 # dependencies
 node_modules
@@ -23,10 +24,6 @@ node_modules
 npm-debug.log
 testem.log
 /typings
-
-# e2e
-/e2e/*.js
-/e2e/*.map
 
 #System Files
 .DS_Store
